# comparative-ner-utils

./: .gitignore  pyproject.toml
abct_comp_ner_utils/: __init__.py  __main__.py  brackets.py  train.py
abct_comp_ner_utils/models/: NER_with_root.py
comparative-NER-BCCWJ/: .gitignore  comparative-NER-BCCWJ.py
comparative-NER-metrics/: comparative-NER-metrics.py
notebooks/: convert-annotations_2023-12-28.ipynb  gen-data_2022-12-27.ipynb  result_annotation_2022-10-26.ipynb  stats_2022-09-02.ipynb  stats_2022-10-19.ipynb  stats_2022-11-16.ipynb  stats_2022-12-31.ipynb
notebooks/retrieve-IDs_2023-02-13/: ID-mapping.csv  backport-to-annot-file.ipynb  gen-data.ipynb  search-BCCWJ.ipynb
notebooks/trainings/: NER_with_root_2022-12-10.ipynb  NER_with_root_2022-12-27.ipynb
