[tool.poetry]
name = "comparative-ner-utils"
version = "0.1.0"
description = ""
authors = ["Nori Hayashi <net@hayashi-lin.net>"]
packages = [
    { include = "abct_comp_ner_utils" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
typer = "^0.6.1"
datasets = "^2.4.0"
torch = {url = "https://download.pytorch.org/whl/cu115/torch-1.11.0%2Bcu115-cp310-cp310-linux_x86_64.whl"}
transformers = "^4.24.0"
fugashi = "^1.1.2"
ipadic = "^1.0.0"
evaluate = "^0.3.0"
scikit-learn = "^1.1.1"
scipy = "1.8.1"
ray = {extras = ["tune"], version = "^1.13.0"}
tensorboard = "^2.9.1"
flatten-dict = "^0.4.2"
optuna = "^2.10.1"
attrs = "^22.1.0"
"ruamel.yaml" = "^0.17.21"
sentencepiece = "^0.1.97"

[tool.poetry.dev-dependencies]
torch-tb-profiler = "^0.4.0"
ipykernel = "^6.15.2"
widgetsnbextension = "^4.0.3"
pandas-profiling = "^3.4.0"
ipywidgets = "^8.0.2"

[tool.poetry.scripts]
abct-comp-ner-utils = "abct_comp_ner_utils:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
